# density-estimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  benchmark_lowdim.sh  cross_validation_errors.csv
cv_csv/: cpp#0#BFGS#0.010000#gaussian_square.csv  cpp#0#BFGS#0.010000#horseshoe.csv  cpp#0#BFGS#0.010000#infections_southampton.csv  cpp#0#BFGS#0.100000#gaussian_square.csv  cpp#0#BFGS#0.100000#horseshoe.csv  cpp#0#BFGS#0.100000#infections_southampton.csv  cpp#0#BFGS#1.000000#gaussian_square.csv  cpp#0#BFGS#1.000000#horseshoe.csv  cpp#0#BFGS#1.000000#infections_southampton.csv  cpp#0#BFGS#10.000000#gaussian_square.csv  cpp#0#BFGS#10.000000#horseshoe.csv  cpp#0#BFGS#10.000000#infections_southampton.csv  cpp#0#BFGS#100.000000#gaussian_square.csv  cpp#0#BFGS#100.000000#horseshoe.csv  cpp#0#BFGS#100.000000#infections_southampton.csv  cpp#0#LBFGS10#0.010000#gaussian_square.csv  cpp#0#LBFGS10#0.010000#horseshoe.csv  cpp#0#LBFGS10#0.010000#infections_southampton.csv  cpp#0#LBFGS10#0.100000#gaussian_square.csv  cpp#0#LBFGS10#0.100000#horseshoe.csv  cpp#0#LBFGS10#0.100000#infections_southampton.csv  cpp#0#LBFGS10#1.000000#gaussian_square.csv  cpp#0#LBFGS10#1.000000#horseshoe.csv  cpp#0#LBFGS10#1.000000#infections_southampton.csv  cpp#0#LBFGS10#10.000000#gaussian_square.csv  cpp#0#LBFGS10#10.000000#horseshoe.csv  cpp#0#LBFGS10#10.000000#infections_southampton.csv  cpp#0#LBFGS10#100.000000#gaussian_square.csv  cpp#0#LBFGS10#100.000000#horseshoe.csv  cpp#0#LBFGS10#100.000000#infections_southampton.csv  cpp#0#cg_fr#0.010000#gaussian_square.csv  cpp#0#cg_fr#0.010000#horseshoe.csv  (+488 more)
(+313 files in other folders)
